--- a/package.json
+++ b/package.json
@@ -10,23 +10,27 @@
     "db:migrate": "tsx ./src/db/migrate.ts --config=drizzle.congif.ts",
     "db:generate": "drizzle-kit generate --config=drizzle.congif.ts"
   },
-
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
     "@kinde-oss/kinde-auth-nextjs": "^2.5.3",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@sentry/nextjs": "^9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.40.0",
+    "drizzle-zod": "^0.7.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
